--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 node_modules/
 dist/
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+debug.log*
+error.log*
 **/*.log
 
 tests/**/coverage/
@@ -12,7 +12,10 @@ selenium-debug.log
 
 # Editor directories and files
 .idea
+
+### VS Code ###
 .vscode
+
 *.suo
 *.ntvs*
 *.njsproj
