--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A template of webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./build/webpack.dev.conf.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.prod.conf.js"
+    "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.prod.conf.js",
+    "test": "npm run build --[test]"
   },
   "keywords": [],
   "author": "szh <1159680364@qq.com>",
@@ -19,10 +19,14 @@
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
